WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199777
Fix non thread-safe usage of makeWeakPtr() in MediaPlayerPrivateAVFoundation
https://bugs.webkit.org/show_bug.cgi?id=199777
Summary
Fix non thread-safe usage of makeWeakPtr() in MediaPlayerPrivateAVFoundation
Chris Dumez
Reported
2019-07-12 20:04:16 PDT
Fix non thread-safe usage of makeWeakPtr() in MediaPlayerPrivateAVFoundation.
Attachments
Patch
(3.36 KB, patch)
2019-07-12 20:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-07-12 20:06:24 PDT
Created
attachment 374073
[details]
Patch
WebKit Commit Bot
Comment 2
2019-07-13 04:07:47 PDT
Comment on
attachment 374073
[details]
Patch Clearing flags on attachment: 374073 Committed
r247415
: <
https://trac.webkit.org/changeset/247415
>
WebKit Commit Bot
Comment 3
2019-07-13 04:07:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-07-13 04:08:17 PDT
<
rdar://problem/53048354
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug